# Android-Vulkan-Cube

./: README.md  build.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  HelloVK.cpp  hellovk.cpp  hellovk.h  vk_main.cpp
app/src/main/java/com/android/hellovk/: VulkanActivity.kt
app/src/main/shaders/: shader.frag  shader.vert
